--- a/css/style.css
+++ b/css/style.css
@@ -562,14 +562,14 @@ textarea {
   display: flex;
   flex-wrap: wrap;
   margin: 0;
-  padding-bottom: 10px;
-  padding-inline: 0;
+  margin-bottom: 10px;
+  padding-left: 0px;
   gap: 16px;
 }
 
 .thrid-tags,
 .fourth-tags {
-  padding-left: 5px;
+  margin-left: 5px;
 }
 
 .trands__tags-item {
@@ -621,7 +621,7 @@ textarea {
 }
 
 .main__post-sign {
-  padding-top: 2px;
+  margin-top: 2px;
 }
 
 .main__post-image {
@@ -640,8 +640,7 @@ textarea {
 }
 
 .main__list-tags {
-  padding: 0 18px 8px 0;
-  margin: 0;
+  margin: 0 18px 8px 0;
 }
 
 .main__tags-item {
@@ -662,7 +661,7 @@ textarea {
   font-size: var(--font-size-title);
   text-transform: uppercase;
   line-height: 1.2;
-  padding: 0 20px 16px 0;
+  margin: 0 20px 16px 0;
 }
 
 .main__title-item {
@@ -678,14 +677,13 @@ textarea {
   font-family: var(--font-family-bold);
   font-size: var(--font-size-small);
   font-style: normal;
-  padding-left: 2px;
 }
 
 .main__post-date {
   font-size: var(--font-size-small);
   color: var(--color-gray);
   line-height: 4rem;
-  padding-right: 9px;
+  margin-right: 11px;
 }
 
 .main__post-desc_item:not(.next-paragraph) {
@@ -732,7 +730,7 @@ p + p {
 
 .aside__new-post {
   display: flex;
-  padding-bottom: 19px;
+  margin-bottom: 19px;
 
   &:first-of-type {
     margin-top: 30px;
@@ -752,7 +750,7 @@ p + p {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  padding-left: 17px;
+  margin-left: 17px;
 }
 
 .aside__post-date {
@@ -785,7 +783,7 @@ p + p {
 
 .search {
   display: flex;
-  padding: 0 0 59px 4px;
+  margin: 0 0 59px 4px;
 }
 
 .search-field {
@@ -827,7 +825,7 @@ p + p {
 .email {
   display: flex;
   flex-direction: column;
-  padding: 24px 0 59px 4px;
+  margin: 24px 0 59px 4px;
 }
 
 .email-field {
@@ -883,14 +881,16 @@ p + p {
 .aside__tags-list {
   display: flex;
   align-content: space-evenly;
-  padding: 15px 0 50px 5px;
+  margin: 15px 0 50px 5px;
 }
 
 .aside__tags-list ul {
   display: flex;
   flex-wrap: wrap;
   gap: 6px;
-  padding: 0;
+  padding-inline: 0;
+  padding-block: 10px;
+  margin-block: 0;
 }
 
 .aside__tags-list ul li a {
@@ -975,7 +975,7 @@ p + p {
   font-weight: 700;
   color: var(--color-gold);
   line-height: 36.82px;
-  padding: 4px 0 0 4px;
+  margin: 4px 0 0 4px;
 }
 
 /*------------ SHOP ------------*/
@@ -1277,16 +1277,16 @@ p + p {
   }
 
   .trands__card-list {
-    padding-bottom: 6px;
+    margin-bottom: 6px;
     gap: 10px;
   }
 
   .thrid-tags {
-    padding-left: 0px;
+    margin-left: 0px;
   }
 
   .fourth-tags {
-    padding-left: 0px;
+    margin-left: 0px;
   }
 
   .trands__card-title {
@@ -1360,8 +1360,7 @@ p + p {
     font-family: var(--font-family-bold);
     font-size: var(--font-size-title-tablet);
     line-height: 1.3;
-    padding: 0px 0px 18px 0;
-    margin-right: -3px;
+    margin: 0px 0px 18px -3px;
   }
 
   .main__post-desc_item:not(.next-paragraph) {
@@ -1508,7 +1507,7 @@ p + p {
   }
 
   .main__post-date {
-    padding-right: 5px;
+    margin-right: 7px;
   }
 
   p + p {
@@ -1546,11 +1545,11 @@ p + p {
   }
 
   .trands__card-list {
-    padding-bottom: 10px;
+    margin-bottom: 10px;
   }
 
   .fourth-tags {
-    padding-left: 0px;
+    margin-left: 0px;
   }
 
   .trands__card-item {
@@ -1609,7 +1608,7 @@ p + p {
   }
 
   .search {
-    padding: 0 0 2px 0px;
+    margin: 0 0 2px 0px;
     justify-content: center;
   }
 
@@ -1630,12 +1629,12 @@ p + p {
   }
 
   .email {
-    padding: 24px 0 4px 0px;
+    margin: 24px 0 4px 0px;
     align-items: center;
   }
 
   .aside__tags-list {
-    padding: 15px 0 0px 0px;
+    margin: 15px 0 0px 0px;
   }
 
   .title-themes {
